# glfw-cmake-start

./: CMakeLists.txt
src/: main.cpp
